--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aula17",
+  "name": "uceii",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.3.0-alpha3",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.4.0",
     "core-js": "^3.9.1",
